# swarm-rover-ai-real-ai

./: .gitignore  20250731_0330_what_is_next_AI.txt  Dockerfile  Dockerfile.ollama  EMBEDDED_MODEL_SURVEY.md  EMBEDDED_SOLUTION.md  GEMINI_INSTRUCTIONS.md  PROJECT_SUPER_CONTEXT.md  README.md  SIMPLE_AGENT_TESTER_FINAL_SUMMARY.md  SIMPLE_AGENT_TESTER_PLAN.md  SIMPLE_AGENT_TESTER_SUMMARY.md  Samy_Start_Here.txt  Swarm Rover AI - Complete Project Blueprint.md  docker-compose.yml  entrypoint.sh  gemini_session_context.txt  gemini_super_context_prompt.md  ollama_entrypoint.sh  requirements.txt  test_simulation.py
deployment/: deploy.sh  kubernetes.yaml
docs/: API_DOCUMENTATION.md  DEVELOPER_GUIDE.md  USER_GUIDE.md  architecture_design.md
models/: download_models.py  optimize_models.py
scripts/: setup_environment.sh
simple_agent_tester/: README.md  ai_communication.py  ai_decisions.json  embedded_ai.py  embedded_test.py  embedded_test_results.json  fast_ai_solution.py  final_ai_solution.py  optimized_ai.py  pure_ai_solution.py  quick_test.py  requirements.txt  run_tests.py  simple_agent.py  simple_test.py  smollm_test.py  test_ai_only.py  test_results.json  test_scenarios.py  tiktok_benchmark.py  timeout_test.py  (+1 more)
swarm_agents/: CMakeLists.txt  package.xml  setup.py
swarm_agents/launch/: basic_swarm.launch.py
swarm_agents/msg/: AlphaElection.msg  FormationControl.msg  SwarmAgentPacket.msg  TaskAnnouncement.msg
swarm_agents/swarm_agents/: agent_node.py  alpha_agent.py  behavior_state_machine.py  coordination_algorithms.py  perception_bridge.py
(+6 files in other folders)
